# KnowledgeGraph

./: .gitignore  README.md  environment.yml  requirements.txt  svo_extractor.py
blt/: .gitignore  README.md  demo.py  download_blt_weights.py  pyproject.toml  requirements.txt
blt/apps/main/: lingua_train.py
blt/bytelatent/: args.py  base_transformer.py  checkpoint.py  config_parser.py  distributed.py  entropy_model.py  eval.py  generate.py  generate_blt.py  hf.py  iterate_data.py  logger.py  metrics.py  norms.py  print_config.py  stool.py  test_blt.py  test_config_parser.py  test_entropy_model.py  train.py  transformer.py
blt/bytelatent/configs/: debug.yaml  entropy_model.yaml
blt/bytelatent/data/: data_types.py  file_util.py  patcher.py  test_data.py
blt/bytelatent/data/iterators/: abstract_iterator.py  arrow_iterator.py  dev_iterators.py  limit_iterator.py  looping_iterator.py  multiprocess_iterator.py  packing_iterator.py  preprocess_iterator.py  sampling_iterator.py  sequence_iterator.py  test_arrow_iterator.py  test_iters.py  test_limit_iterator.py  test_packing_iterator.py
blt/bytelatent/model/: blt.py  latent_transformer.py  local_models.py
blt/bytelatent/preprocess/: preprocess_entropies.py
blt/bytelatent/templates/: stool_template.sh.jinja
blt/bytelatent/tokenizers/: blt_tokenizer.py  build_tokenizer.py  sentence_piece_tokenizer.py  tiktoken_tokenizer.py
blt/fixtures/: test_docs.jsonl
blt/fixtures/test-cfgs/: middle.yaml  root.yaml  top.yaml
blt/setup/: create_env.sh
blt_integration/: data_utils.py  detect_boundary.py  evaluate.py  (+3 more)
(+8 files in other folders)
