[project]
name = "blt"
version = "0.1.0"
description = "BLT"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "altair>=5.5.0",
    "datatrove>=0.5.0",
    "fsspec>=2024.6.1",
    "huggingface-hub==0.30.*",
    "jinja2>=3.1.6",
    "lm-eval>=0.4.8",
    "luigi>=3.6.0",
    "numpy>=2.1.2",
    "omegaconf>=2.3.0",
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "pynvml>=12.0.0",
    "rich>=14.0.0",
    "s3fs>=2024.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "submitit>=1.5.2",
    "tiktoken>=0.8.0",
    "typer>=0.15.3",
    "viztracer>=1.0.3",
    "wandb>=0.19.10",
    "xformers",
]

[[tool.uv.index]]
name = "torch-nightly-cu121"
url = "https://download.pytorch.org/whl/nightly/cu121"


[tool.uv.sources]
torch = {index = "torch-nightly-cu121"}
xformers = { git = "https://github.com/facebookresearch/xformers.git", rev = "de742ec3d64bd83b1184cc043e541f15d270c148" }

[dependency-groups]
pre_build = [
    "setuptools",
    "ninja",
    "torch==2.6.0.dev20241112",
]
compile_xformers = ['xformers']
dev = [
    "black==24.8.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "pudb>=2025.1",
]


[tool.uv]
no-build-isolation-package = ["xformers"]
index-strategy = "unsafe-best-match"
override-dependencies = ["torch==2.6.0.dev20241112"]

[tool.isort]
profile = "black"
known_bytelatent = "bytelatent"
known_apps = "apps"
known_third_party = "wandb"
sections = "FUTURE,STDLIB,THIRDPARTY,BYTELATENT,APPS,FIRSTPARTY,LOCALFOLDER"
